Main page changed a bit

--- a/Code/frontend/facial-keypoint-recognition/src/app/app.component.html
+++ b/Code/frontend/facial-keypoint-recognition/src/app/app.component.html
@@ -1,4 +1,13 @@
-<app-camera (pictureTaken)="handleImage($event)"></app-camera>
-<div class="snapshot" *ngIf="webcamImage">
-  <img [src]="webcamImage.imageAsDataUrl" />
-</div>
+
+
+
+<mat-grid-list cols="2">
+  <mat-grid-tile>
+    <app-camera (pictureTaken)="handleImage($event)"></app-camera>
+  </mat-grid-tile>
+  <mat-grid-tile>
+    <div class="snapshot" *ngIf="webcamImage">
+      <img [src]="webcamImage.imageAsDataUrl" />
+    </div>
+  </mat-grid-tile>
+</mat-grid-list>
