--- a/Code/frontend/facial-keypoint-recognition/src/app/components/camera/camera.component.html
+++ b/Code/frontend/facial-keypoint-recognition/src/app/components/camera/camera.component.html
@@ -1,12 +1,10 @@
 <div style="text-align:center">
     <div>
         <webcam [height]="500" [width]="500" [trigger]="triggerObservable" (imageCapture)="handleImage($event)"
-            *ngIf="showWebcam" [allowCameraSwitch]="allowCameraSwitch" [switchCamera]="nextWebcamObservable"
-            [videoOptions]="videoOptions" (cameraSwitched)="cameraWasSwitched($event)"
+            *ngIf="showWebcam" [videoOptions]="videoOptions" [allowCameraSwitch]="allowCameraSwitch"
             (initError)="handleInitError($event)"></webcam>
         <br />
         <div class="actionBtn" (click)="triggerSnapshot();" title="Take Picture">📸</div>
-        <div class="actionBtn" (click)="showNextWebcam(true);" title="Switch Camera">🔁</div>
     </div>
 </div>
 <h4 *ngIf="errors.length > 0">Messages:</h4>
