--- a/Code/frontend/facial-keypoint-recognition/src/app/components/camera/camera.component.html
+++ b/Code/frontend/facial-keypoint-recognition/src/app/components/camera/camera.component.html
@@ -1,7 +1,7 @@
 <div style="text-align:center">
     <div>
         <webcam [height]="500" [width]="500" [trigger]="triggerObservable" (imageCapture)="handleImage($event)"
-            *ngIf="showWebcam" [videoOptions]="videoOptions" [allowCameraSwitch]="allowCameraSwitch"
+            *ngIf="showWebcam" [videoOptions]="videoOptions" [allowCameraSwitch]="allowCameraSwitch" [captureImageData]="captureImageData"
             (initError)="handleInitError($event)"></webcam>
         <br />
         <div class="actionBtn" (click)="triggerSnapshot();" title="Take Picture">📸</div>
