--- a/Code/frontend/facial-keypoint-recognition/src/app/components/camera/camera.component.html
+++ b/Code/frontend/facial-keypoint-recognition/src/app/components/camera/camera.component.html
@@ -1,7 +1,7 @@
 <div style="text-align:center">
     <div>
         <webcam [height]="500" [width]="500" [trigger]="triggerObservable" (imageCapture)="handleImage($event)"
-            *ngIf="showWebcam" [videoOptions]="videoOptions" [allowCameraSwitch]="allowCameraSwitch" [captureImageData]="captureImageData"
+            *ngIf="showWebcam" [videoOptions]="videoOptions" [allowCameraSwitch]="allowCameraSwitch" [captureImageData]="captureImageData" [imageType]="'image/png'"
             (initError)="handleInitError($event)"></webcam>
         <br />
         <div class="actionBtn" (click)="triggerSnapshot();" title="Take Picture">📸</div>
@@ -11,3 +11,5 @@
 <ul *ngFor="let error of errors">
     <li>{{error | json}}</li>
 </ul>
+
+<button mat-raised-button color="primary" (click)="sendFacialKeypointRequest()">Send Reques</button>
