--- a/Code/frontend/facial-keypoint-recognition/src/app/components/camera/camera.component.html
+++ b/Code/frontend/facial-keypoint-recognition/src/app/components/camera/camera.component.html
@@ -12,4 +12,4 @@
     <li>{{error | json}}</li>
 </ul>
 
-<button mat-raised-button color="primary" (click)="sendFacialKeypointRequest()">Send Reques</button>
+<button mat-raised-button color="primary" (click)="sendFacialKeypointRequest()">Send Request</button>
