--- a/Code/frontend/facial-keypoint-recognition/src/app/app.component.html
+++ b/Code/frontend/facial-keypoint-recognition/src/app/app.component.html
@@ -1,13 +1,17 @@
 
-
-
-<mat-grid-list cols="2">
+<mat-grid-list cols="3">
   <mat-grid-tile>
-    <app-camera (pictureTaken)="handleImage($event)"></app-camera>
+    <app-camera (pictureTaken)="handleImage($event)" (keypointsPredicted)="handleFacialKeypointsRequestResult($event)"></app-camera>
   </mat-grid-tile>
   <mat-grid-tile>
     <div class="snapshot" *ngIf="webcamImage">
       <img [src]="webcamImage.imageAsDataUrl" />
     </div>
   </mat-grid-tile>
+  <mat-grid-tile>
+    <div class="snapshot" *ngIf="dataUrl">
+      <img [src]="dataUrl" />
+    </div>
+  </mat-grid-tile>
 </mat-grid-list>
+
