--- a/Code/frontend/facial-keypoint-recognition/src/app/components/camera/camera.component.css
+++ b/Code/frontend/facial-keypoint-recognition/src/app/components/camera/camera.component.css
@@ -1,8 +1,8 @@
-.actionBtn {
+/* .actionBtn {
     font-size: 4em;
     cursor: pointer;
-}
-.snapshot{
+} */
+/* .snapshot{
     text-align: center;
     img{
         max-width: 800px;
@@ -11,4 +11,4 @@
 }
 ul.links{
     padding-bottom: 20px;
-}
+} */
